--- a/cluster/apps/networking/metallb/ip-address-pool.yaml
+++ b/cluster/apps/networking/metallb/ip-address-pool.yaml
@@ -1,24 +1,24 @@
-# https://metallb.universe.tf/configuration/
-apiVersion: metallb.io/v1beta1
-kind: IPAddressPool
-metadata:
-  # A name for the address pool. Services can request allocation
-  # from a specific address pool using this name, by listing this
-  # name under the 'metallb.universe.tf/address-pool' annotation.
-  name: metallb-cluster-pool
-  namespace: networking
-spec:
-  # A list of IP address ranges over which MetalLB has
-  # authority. You can list multiple ranges in a single pool, they
-  # will all share the same settings. Each range can be either a
-  # CIDR prefix, or an explicit start-end range of IPs.
-  addresses:
-    - 192.168.1.240-192.168.1.249
----
-# Protocol can be used to select how the announcement is done.
-# Setting no IPAddressPool selector in an L2Advertisement instance is interpreted as that instance being associated to all the IPAddressPools available.
-apiVersion: metallb.io/v1beta1
-kind: L2Advertisement
-metadata:
-  name: metallb-l2advertiser
-  namespace: networking
+## https://metallb.universe.tf/configuration/
+#apiVersion: metallb.io/v1beta1
+#kind: IPAddressPool
+#metadata:
+#  # A name for the address pool. Services can request allocation
+#  # from a specific address pool using this name, by listing this
+#  # name under the 'metallb.universe.tf/address-pool' annotation.
+#  name: metallb-cluster-pool
+#  namespace: networking
+#spec:
+#  # A list of IP address ranges over which MetalLB has
+#  # authority. You can list multiple ranges in a single pool, they
+#  # will all share the same settings. Each range can be either a
+#  # CIDR prefix, or an explicit start-end range of IPs.
+#  addresses:
+#    - 192.168.1.240-192.168.1.249
+#---
+## Protocol can be used to select how the announcement is done.
+## Setting no IPAddressPool selector in an L2Advertisement instance is interpreted as that instance being associated to all the IPAddressPools available.
+#apiVersion: metallb.io/v1beta1
+#kind: L2Advertisement
+#metadata:
+#  name: metallb-l2advertiser
+#  namespace: networking
