chore(longhorn): add longhorn dependencies to a bunch of charts

--- a/cluster/apps/default/flood/flood-helm-release.yaml
+++ b/cluster/apps/default/flood/flood-helm-release.yaml
@@ -15,6 +15,9 @@ spec:
         name: k8s-at-home-charts
         namespace: flux-system
       interval: 5m
+  dependsOn:
+    - name: longhorn
+      namespace: longhorn-system
   values:
     image:
       repository: jesec/flood
