--- a/cluster/apps/default/mealie/mealie-helm-release.yaml
+++ b/cluster/apps/default/mealie/mealie-helm-release.yaml
@@ -22,6 +22,9 @@ spec:
     cleanupOnFail: true
     remediation:
       retries: 3
+  dependsOn:
+    - name: longhorn
+      namespace: longhorn-system
   values:
     # https://github.com/bjw-s/helm-charts/blob/main/charts/library/common/values.yaml
     controllers:
