--- a/cluster/apps/default/hyperion/hyperion-helm-release.yaml
+++ b/cluster/apps/default/hyperion/hyperion-helm-release.yaml
@@ -15,6 +15,9 @@ spec:
         name: k8s-at-home-charts
         namespace: flux-system
       interval: 5m
+  dependsOn:
+    - name: longhorn
+      namespace: longhorn-system
   values:
     # https://github.com/k8s-at-home/charts/blob/master/charts/stable/syncthing/values.yaml
     image:
