chore(mettalb): make metallb work again

--- a/cluster/apps/networking/metallb/metallb-helm-release.yaml
+++ b/cluster/apps/networking/metallb/metallb-helm-release.yaml
@@ -26,10 +26,10 @@ spec:
   values:
     crds:
       enabled: true
-#    prometheus:
-#      namespace: monitoring
-#      serviceAccount: kube-prometheus-stack-prometheus
-#      podMonitor:
-#        enabled: true
-#      prometheusRule:
-#        enabled: true
+    prometheus:
+      namespace: monitoring
+      serviceAccount: kube-prometheus-stack-prometheus
+      podMonitor:
+        enabled: true
+      prometheusRule:
+        enabled: true
