--- a/cluster/apps/networking/metallb/metallb-helm-release.yaml
+++ b/cluster/apps/networking/metallb/metallb-helm-release.yaml
@@ -22,6 +22,9 @@ spec:
     cleanupOnFail: true
     remediation:
       retries: 3
+  dependsOn:
+    - name: kube-prometheus-stack
+      namespace: monitoring
   # https://github.com/metallb/metallb/blob/main/charts/metallb/values.yaml
   values:
     crds:
