fix(flood): make new flood pvc work

--- a/cluster/apps/default/flood/flood-helm-release.yaml
+++ b/cluster/apps/default/flood/flood-helm-release.yaml
@@ -55,7 +55,7 @@ spec:
     persistence:
       config:
         enabled: true
-        existingClaim: flood-config-pvc
+        existingClaim: flood-config-pvc-2
       # PVC from qbittorrent
       downloads:
         enabled: true
