--- a/cluster/apps/default/flood/pvc.yaml
+++ b/cluster/apps/default/flood/pvc.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: flood-config-pvc
+  name: flood-config-pvc-2
   namespace: default
 spec:
   accessModes:
