wip(flood): attempt at making flood work

--- a/cluster/apps/default/flood/flood-helm-release.yaml
+++ b/cluster/apps/default/flood/flood-helm-release.yaml
@@ -85,3 +85,8 @@ spec:
         cpu: 500m
       limits:
         memory: 1500Mi
+
+    podSecurityContext:
+      runAsUser: 1001
+      runAsGroup: 1001
+      fsGroup: 1001
