--- a/cluster/apps/default/mealie/mealie-helm-release.yaml
+++ b/cluster/apps/default/mealie/mealie-helm-release.yaml
@@ -68,7 +68,7 @@ spec:
         annotations:
           nginx.ingress.kubernetes.io/auth-url: "http://oauth2-proxy.networking.svc.cluster.local/oauth2/auth"
           nginx.ingress.kubernetes.io/auth-signin: "https://auth.${SECRET_DOMAIN}/oauth2/sign_in"
-          external-dns/is-public: "true"
+          external-dns/is-public: "false"
           external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
         hosts:
           - host: "mealie.${SECRET_DOMAIN}"
