--- a/cluster/apps/default/hyperion/hyperion-helm-release.yaml
+++ b/cluster/apps/default/hyperion/hyperion-helm-release.yaml
@@ -40,7 +40,7 @@ spec:
     ingress:
       main:
         enabled: true
-        ingressClassName: "nginx"
+        ingressClassName: "internal"
         annotations:
           nginx.ingress.kubernetes.io/connection-proxy-header: "upgrade"
           nginx.ingress.kubernetes.io/auth-url: "http://oauth2-proxy.networking.svc.cluster.local/oauth2/auth"
