--- a/cluster/apps/networking/oauth2-proxy/oauth2-proxy-helm-release.yaml
+++ b/cluster/apps/networking/oauth2-proxy/oauth2-proxy-helm-release.yaml
@@ -47,7 +47,7 @@ spec:
 
     ingress:
       enabled: true
-      className: nginx
+      className: external
       path: /oauth2
       hosts: [ "auth.${SECRET_DOMAIN}" ]
       tls:
