--- a/cluster/apps/default/actual-budget/ingress.yaml
+++ b/cluster/apps/default/actual-budget/ingress.yaml
@@ -13,7 +13,7 @@ metadata:
     external-dns/is-public: "true"
     external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
 spec:
-  ingressClassName: "nginx"
+  ingressClassName: "external"
   rules:
     - host: "actual.${SECRET_DOMAIN}"
       http:
