--- a/cluster/apps/default/actual-budget/sms-proxy/ingress.yaml
+++ b/cluster/apps/default/actual-budget/sms-proxy/ingress.yaml
@@ -11,7 +11,7 @@ metadata:
     external-dns/is-public: "true"
     external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
 spec:
-  ingressClassName: "nginx"
+  ingressClassName: "external"
   rules:
     - host: "actual-sms-proxy.${SECRET_DOMAIN}"
       http:
