--- a/cluster/apps/default/sonarr/sonarr-helm-release.yaml
+++ b/cluster/apps/default/sonarr/sonarr-helm-release.yaml
@@ -78,7 +78,7 @@ spec:
     ingress:
       main:
         enabled: true
-        className: "nginx"
+        className: "external"
         annotations:
           nginx.ingress.kubernetes.io/auth-url: "http://oauth2-proxy.networking.svc.cluster.local/oauth2/auth"
           nginx.ingress.kubernetes.io/auth-signin: "https://auth.${SECRET_DOMAIN}/oauth2/sign_in"
