--- a/cluster/apps/default/syncthing/syncthing-helm-release.yaml
+++ b/cluster/apps/default/syncthing/syncthing-helm-release.yaml
@@ -24,11 +24,12 @@ spec:
     ingress:
       main:
         enabled: true
-        ingressClassName: "nginx"
+        ingressClassName: "internal"
         annotations:
           nginx.ingress.kubernetes.io/connection-proxy-header: "upgrade"
           nginx.ingress.kubernetes.io/auth-url: "http://oauth2-proxy.networking.svc.cluster.local/oauth2/auth"
           nginx.ingress.kubernetes.io/auth-signin: "https://auth.${SECRET_DOMAIN}/oauth2/sign_in"
+          external-dns/is-public: "false"
         hosts:
           - host: "syncthing.${SECRET_DOMAIN}"
             paths:
