--- a/cluster/apps/mb-scheduler/mb-scheduler-frontend/ingress.yaml
+++ b/cluster/apps/mb-scheduler/mb-scheduler-frontend/ingress.yaml
@@ -7,7 +7,7 @@ metadata:
     external-dns/is-public: "false"
     external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
 spec:
-  ingressClassName: "nginx"
+  ingressClassName: "external"
   rules:
     - host: "app-mb-scheduler.${SECRET_DOMAIN}"
       http:
