--- a/cluster/apps/vpn/wstunnel/ingress.yaml
+++ b/cluster/apps/vpn/wstunnel/ingress.yaml
@@ -11,7 +11,7 @@ metadata:
     external-dns/is-public: "true"
     external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
 spec:
-  ingressClassName: "nginx"
+  ingressClassName: "external"
   rules:
     - host: "wg.${SECRET_DOMAIN}"
       http:
