--- a/cluster/apps/networking/nginx/external.yaml
+++ b/cluster/apps/networking/nginx/external.yaml
@@ -30,6 +30,13 @@ spec:
       ingressClassResource:
         name: external
         default: false
+        controllerValue: k8s.io/external
+      admissionWebhooks:
+        objectSelector:
+          matchExpressions:
+            - key: ingress-class
+              operator: In
+              values: [ "external" ]
       service:
         type: LoadBalancer
         loadBalancerIP: 192.168.1.240
