fix(ingress-nginx): yet another attempt at taming ingress-nginx

--- a/cluster/apps/networking/nginx/external.yaml
+++ b/cluster/apps/networking/nginx/external.yaml
@@ -27,6 +27,8 @@ spec:
     fullnameOverride: nginx-external
     controller:
       replicaCount: 2
+      # https://kubernetes.github.io/ingress-nginx/user-guide/multiple-ingress/
+      electionID: external-ingress-controller-leader
       ingressClassResource:
         name: external
         default: false
