--- a/cluster/apps/networking/nginx/external.yaml
+++ b/cluster/apps/networking/nginx/external.yaml
@@ -162,3 +162,20 @@ spec:
         - name: crowdsec-bouncer-plugin
           mountPath: /etc/nginx/lua/plugins/crowdsec
           subPath: crowdsec
+
+    defaultBackend:
+      enabled: true
+      image:
+        repository: ghcr.io/tarampampam/error-pages
+        tag: 2.26.0
+      extraEnvs:
+      - name: TEMPLATE_NAME # Optional: change the default theme
+        value: cats
+      - name: SHOW_DETAILS # Optional: enables the output of additional information on error pages
+        value: 'false'
+      resources:
+        requests:
+          memory: 250Mi
+          cpu: 25m
+        limits:
+          memory: 350Mi
