feat(external-dns): add service monitor to enable prometheus scraping

--- a/cluster/apps/networking/external-dns/external-dns-helm-release.yaml
+++ b/cluster/apps/networking/external-dns/external-dns-helm-release.yaml
@@ -46,6 +46,11 @@ spec:
         cpu: 25m
       limits:
         memory: 250Mi
+    metrics:
+      enabled: true
+      serviceMonitor:
+        enabled: true
+        namespace: monitoring
 #    affinity:
 #      nodeAffinity:
 #        requiredDuringSchedulingIgnoredDuringExecution:
