--- a/cluster/apps/monitoring/grafana/grafana-helm-release.yaml
+++ b/cluster/apps/monitoring/grafana/grafana-helm-release.yaml
@@ -159,13 +159,13 @@ spec:
           token: ''
       flux:
         flux-cluster:
-          url: https://github.com/fluxcd/flux2-monitoring-example/blob/main/monitoring/configs/dashboards/cluster.json
+          url: https://raw.githubusercontent.com/fluxcd/flux2-monitoring-example/main/monitoring/configs/dashboards/cluster.json
           datasource: Prometheus
         flux-control-plane:
-          url: https://github.com/fluxcd/flux2-monitoring-example/blob/main/monitoring/configs/dashboards/control-plane.json
+          url: https://raw.githubusercontent.com/fluxcd/flux2-monitoring-example/main/monitoring/configs/dashboards/control-plane.json
           datasource: Prometheus
         flux-logs:
-          url: https://github.com/fluxcd/flux2-monitoring-example/blob/main/monitoring/configs/dashboards/logs.json
+          url: https://raw.githubusercontent.com/fluxcd/flux2-monitoring-example/main/monitoring/configs/dashboards/logs.json
           datasource: Loki
     plugins:
       - grafana-worldmap-panel
