chore: adjust requests and limits for multiple deployments

--- a/cluster/apps/default/actual-budget/deployment.yaml
+++ b/cluster/apps/default/actual-budget/deployment.yaml
@@ -26,6 +26,12 @@ spec:
           volumeMounts:
             - mountPath: "/data"
               name: actual-data-volume
+          resources:
+            requests:
+              cpu: 10m
+              memory: 100Mi
+            limits:
+              memory: 100Mi
       volumes:
         - name: actual-data-volume
           persistentVolumeClaim:
