--- a/cluster/apps/default/actual-budget/sms-proxy/deployment.yaml
+++ b/cluster/apps/default/actual-budget/sms-proxy/deployment.yaml
@@ -45,6 +45,12 @@ spec:
             - name: config-volume
               mountPath: /usr/src/app/config.json
               subPath: config.json
+          resources:
+            requests:
+              cpu: 10m
+              memory: 138Mi
+            limits:
+              memory: 138Mi
       volumes:
         - name: config-volume
           configMap:
