chore: some even more requests / limit adjustments

--- a/cluster/apps/default/plex/plex-helm-release.yaml
+++ b/cluster/apps/default/plex/plex-helm-release.yaml
@@ -90,6 +90,12 @@ spec:
                   operator: NotIn
                   values:
                     - arm64
+    resources:
+      requests:
+#        cpu: 3
+        memory: 983Mi
+      limits:
+        memory: 983Mi
 #    addons:
 #      promtail:
 #        enabled: true
