--- a/cluster/apps/mb-scheduler/mb-scheduler-frontend/deployment.yaml
+++ b/cluster/apps/mb-scheduler/mb-scheduler-frontend/deployment.yaml
@@ -24,5 +24,11 @@ spec:
           ports:
             - protocol: TCP
               containerPort: 80
+          resources:
+            requests:
+              cpu: 10m
+              memory: 100Mi
+            limits:
+              memory: 100Mi
       imagePullSecrets:
         - name: ghcr-login-secret
