--- a/cluster/apps/mb-scheduler/redis/redis-helm-release.yaml
+++ b/cluster/apps/mb-scheduler/redis/redis-helm-release.yaml
@@ -31,7 +31,7 @@ spec:
 
     resources:
       requests:
-        cpu: 23m
-        memory: 64M
+        cpu: 10m
+        memory: 100Mi
       limits:
-        memory: 64M
+        memory: 100Mi
