--- a/cluster/apps/mb-scheduler/mb-scheduler-backend/deployment.yaml
+++ b/cluster/apps/mb-scheduler/mb-scheduler-backend/deployment.yaml
@@ -40,6 +40,12 @@ spec:
           volumeMounts:
             - name: static-folder
               mountPath: /app/staticfiles
+          resources:
+            requests:
+              cpu: 10m
+              memory: 100Mi
+            limits:
+              memory: 100Mi
         # NGINX container to server static files
         - name: nginx
           image: nginx:1.25.3
@@ -51,6 +57,12 @@ spec:
               mountPath: /static/
             - name: nginx-config
               mountPath: /etc/nginx/conf.d/
+          resources:
+            requests:
+              cpu: 10m
+              memory: 100Mi
+            limits:
+              memory: 100Mi
 
       imagePullSecrets:
         - name: ghcr-login-secret
