--- a/cluster/apps/mb-scheduler/mb-scheduler-worker/deployment.yaml
+++ b/cluster/apps/mb-scheduler/mb-scheduler-worker/deployment.yaml
@@ -39,6 +39,12 @@ spec:
           envFrom:
             - secretRef:
                 name: mb-scheduler-backend-secrets
+          resources:
+            requests:
+              cpu: 10m
+              memory: 350Mi
+            limits:
+              memory: 350Mi
         # Consider using redbeat if going to scale workers and want a highly available celery-beat
         - name: celery-beat
           image: ghcr.io/shadyf/mb-backend:v1.1.8
@@ -52,6 +58,12 @@ spec:
           envFrom:
             - secretRef:
                 name: mb-scheduler-backend-secrets
+          resources:
+            requests:
+              cpu: 10m
+              memory: 100Mi
+            limits:
+              memory: 100Mi
 
       imagePullSecrets:
         - name: ghcr-login-secret
