--- a/cluster/apps/default/actual-budget/deployment.yaml
+++ b/cluster/apps/default/actual-budget/deployment.yaml
@@ -8,7 +8,7 @@ metadata:
 spec:
   replicas: 1
   strategy:
-    type: Recreate
+    type: RollingUpdate
   selector:
     matchLabels:
       app: actual-budget
