wip(kured): test out kured by turning off schedule

--- a/cluster/apps/kube-system/kured/kured-helmrelease.yaml
+++ b/cluster/apps/kube-system/kured/kured-helmrelease.yaml
@@ -40,8 +40,8 @@ spec:
   maxHistory: 3
   values:
     configuration:
-      startTime: "2:00"
-      endTime: "6:00"
+#      startTime: "2:00"
+#      endTime: "6:00"
       timeZone: "Africa/Cairo"
 #      rebootDays:
 #        - th
