wip(kured): reduce check period to 2m to test things out

--- a/cluster/apps/kube-system/kured/kured-helmrelease.yaml
+++ b/cluster/apps/kube-system/kured/kured-helmrelease.yaml
@@ -42,6 +42,7 @@ spec:
     configuration:
 #      startTime: "2:00"
 #      endTime: "6:00"
+      period: "2m"
       timeZone: "Africa/Cairo"
 #      rebootDays:
 #        - th
