--- a/cluster/apps/monitoring/kube-prometheus-stack/kube-prometheus-stack-release.yaml
+++ b/cluster/apps/monitoring/kube-prometheus-stack/kube-prometheus-stack-release.yaml
@@ -36,63 +36,44 @@ spec:
 
     cleanPrometheusOperatorObjectNames: true
 
-    #    defaultRules:
-    #      disabled:
-    #        HostHighCpuLoad: true
-
     alertmanager:
-      #      config:
-      #        global:
-      #          resolve_timeout: 5m
-      #        receivers:
-      #          - name: 'null'
-      #          - name: 'slack-notifications'
-      #            slack_configs:
-      #              - channel: '#notifications'
-      #                icon_url: https://avatars3.githubusercontent.com/u/3380462
-      #                username: 'Alertmanager'
-      #                send_resolved: true
-      #                title: |-
-      #                  [{{ .Status | toUpper }}{{ if eq .Status "firing" }}:{{ .Alerts.Firing | len }}{{ end }}] {{ if ne .CommonAnnotations.summary ""}}{{ .CommonAnnotations.summary }} {{ else if ne .CommonAnnotations.message ""}}{{ .CommonAnnotations.message }} {{ else if ne .CommonAnnotations.description ""}}{{ .CommonAnnotations.description }} {{ else }}{{ .CommonLabels.alertname }}{{ end }}
-      #                text: >-
-      #                  {{ range .Alerts -}}
-      #                    *Alert:* {{ .Annotations.title }}{{ if .Labels.severity }} - `{{ .Labels.severity }}`{{ end }}
-      #
-      #                  {{ if ne .Annotations.summary ""}}*Summary:* {{ .Annotations.summary }} {{ else if ne .Annotations.message ""}}*Message:* {{ .Annotations.message }} {{ else if ne .Annotations.description ""}}*Description:* {{ .Annotations.description }}{{ end }}
-      #
-      #                  *Details:*
-      #                    {{ range .Labels.SortedPairs }} • *{{ .Name }}:* `{{ .Value }}`
-      #                    {{ end }}
-      #                  {{ end }}
-      #        route:
-      #          group_by: [ "alertname", "job" ]
-      #          group_wait: 45s
-      #          group_interval: 10m
-      #          repeat_interval: 12h
-      #          receiver: 'slack-notifications'
-      #          routes:
-      #            - receiver: "null" # quote
-      #              matchers:
-      #                - alertname =~ "Watchdog"
-      #            - receiver: "null" # quote
-      #              matchers:
-      #                - alertname =~ "InfoInhibitor"
-      #            # - receiver: 'pagerduty'
-      #            #   matchers:
-      #            #     - severity = "critical"
-      #            #   continue: true
-      #            - receiver: 'slack-notifications'
-      #        inhibit_rules:
-      #          - source_matchers:
-      #              - severity = "critical"
-      #            target_matchers:
-      #              - severity = "warning"
-      #            equal: [ "alertname", "namespace" ]
-      #
-      #        templates: [ "*.tmpl" ]
-      #      templateFiles:
-      #        pagerduty-custom.tmpl: |-
-      #          {{- define "pagerduty.custom.description" -}}[{{ .Status | toUpper }}{{ if eq .Status "firing" }}:{{ .Alerts.Firing | len }}{{ end }}] {{ if ne .CommonAnnotations.summary ""}}{{ .CommonAnnotations.summary }} {{ else if ne .CommonAnnotations.message ""}}{{ .CommonAnnotations.message }} {{ else if ne .CommonAnnotations.description ""}}{{ .CommonAnnotations.description }} {{ else }}{{ .CommonLabels.alertname }}{{ end }}{{- end -}}
+      config:
+        global:
+          resolve_timeout: 5m
+        receivers:
+          - name: 'null'
+          - name: "ntfy"
+            webhook_configs:
+                - url: "http://ntfy-alertmanager-svc.monitoring.svc.cluster.local:8080"
+#                  http_config:
+#                      basic_auth:
+#                          username: "webhookUser"
+#                          password: "webhookPass"
+        route:
+          group_by: [ "alertname", "job" ]
+          group_wait: 1m
+          group_interval: 10m
+          repeat_interval: 12h
+          receiver: 'ntfy'
+          routes:
+            - receiver: "null" # quote
+              matchers:
+                - alertname =~ "Watchdog"
+            - receiver: "null" # quote
+              matchers:
+                - alertname =~ "InfoInhibitor"
+            - receiver: 'pagerduty'
+              matchers:
+                - severity = "critical"
+              continue: true
+            - receiver: 'ntfy'
+        inhibit_rules:
+          - source_matchers:
+              - severity = "critical"
+            target_matchers:
+              - severity = "warning"
+            equal: [ "alertname", "namespace" ]
+
       ingress:
         enabled: true
         ingressClassName: internal
