--- a/cluster/apps/default/plex/plex-helm-release.yaml
+++ b/cluster/apps/default/plex/plex-helm-release.yaml
@@ -96,21 +96,21 @@ spec:
         memory: 983Mi
       limits:
         memory: 983Mi
-#    addons:
-#      promtail:
-#        enabled: true
-#        image:
-#          repository: grafana/promtail
-#          tag: 2.9.3
-#        loki: http://loki.monitoring.svc.cluster.local:3100/loki/api/v1/push
-#        logs:
-#          - name: promtail/plex
-#            path: "/config/Library/Application Support/Plex Media Server/Logs/*.log"
-#          - name: promtail/plex/plugins
-#            path: "/config/Library/Application Support/Plex Media Server/Logs/PMS Plugin Logs/*.log"
-#        volumeMounts:
-#          - name: config
-#            mountPath: /config
-#            readOnly: true
-#        securityContext:
-#          runAsUser: 0
+    addons:
+      promtail:
+        enabled: true
+        image:
+          repository: grafana/promtail
+          tag: 2.9.3
+        loki: http://loki.monitoring.svc.cluster.local:3100/loki/api/v1/push
+        logs:
+          - name: promtail/plex
+            path: "/config/Library/Application Support/Plex Media Server/Logs/*.log"
+          - name: promtail/plex/plugins
+            path: "/config/Library/Application Support/Plex Media Server/Logs/PMS Plugin Logs/*.log"
+        volumeMounts:
+          - name: config
+            mountPath: /config
+            readOnly: true
+        securityContext:
+          runAsUser: 0
