--- a/cluster/apps/monitoring/ntfy/ntfy-helm-release.yaml
+++ b/cluster/apps/monitoring/ntfy/ntfy-helm-release.yaml
@@ -2,7 +2,7 @@ apiVersion: helm.toolkit.fluxcd.io/v2beta2
 kind: HelmRelease
 metadata:
   name: ntfy
-  namespace: default
+  namespace: monitoring
 spec:
   interval: 15m
   chart:
