--- a/cluster/apps/monitoring/ntfy/pvc.yaml
+++ b/cluster/apps/monitoring/ntfy/pvc.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: ntfy-cache-pvc
-  namespace: default
+  namespace: monitoring
 spec:
   accessModes:
     - ReadWriteOnce
@@ -15,7 +15,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: ntfy-auth-pvc
-  namespace: default
+  namespace: monitoring
 spec:
   accessModes:
     - ReadWriteOnce
