--- a/cluster/apps/monitoring/ntfy/stunnel/certificate.yaml
+++ b/cluster/apps/monitoring/ntfy/stunnel/certificate.yaml
@@ -2,7 +2,7 @@ apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
   name: "ntfy-stunnel-${SECRET_DOMAIN/./-}"
-  namespace: default
+  namespace: monitoring
 spec:
   secretName: "ntfy-stunnel-${SECRET_DOMAIN/./-}-tls"
   issuerRef:
