fix(kube-state-metrics): fix wrong file name in configmap

--- a/cluster/apps/monitoring/kube-prometheus-stack/resources/kube-state-metrics.yaml
+++ b/cluster/apps/monitoring/kube-prometheus-stack/resources/kube-state-metrics.yaml
@@ -6,7 +6,7 @@ metadata:
   name: kube-state-metrics-configmap
   namespace: monitoring
 data:
-  kube-state-metrics.yml: |-
+  kube-state-metrics.yaml: |-
     kube-state-metrics:
       fullnameOverride: kube-state-metrics
       metricLabelsAllowlist:
