--- a/cluster/base/flux-system-extras/monitoring/flux-podmonitors.yaml
+++ b/cluster/base/flux-system-extras/monitoring/flux-podmonitors.yaml
@@ -1,5 +1,5 @@
----
-# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/monitoring.coreos.com/podmonitor_v1.json
+# Needed to be able to make kube-prometheus-stack scrape flux controller
+# See https://fluxcd.io/flux/monitoring/metrics/#monitoring-setup
 apiVersion: monitoring.coreos.com/v1
 kind: PodMonitor
 metadata:
