chore(kured): change ntfy token

--- a/cluster/apps/kube-system/kured/secrets.enc.yaml
+++ b/cluster/apps/kube-system/kured/secrets.enc.yaml
@@ -4,32 +4,32 @@ metadata:
     name: kured-secret
     namespace: kube-system
 stringData:
-    NOTIFY_URL: ENC[AES256_GCM,data:9Wli49aU6ALQ1vFjt4kRxCmugo1Mh98P5ptTpKmIZlxHBPP/H6gWw6Vn6y/7osfvW/Yxs2C6RDjn6gN3UVMaHgfdnorysbJc6wRtk5cpz4hvfejxi3zd9enyu1Y=,iv:NJahtN7xjG4r/QJGyrXdBZZw6dmW4WQ3xP6YCgN0Id0=,tag:KiNLH20U9HDpfBeCTQCqog==,type:str]
+    NOTIFY_URL: ENC[AES256_GCM,data:C+NgykRATzOVIAxgl10XfbqHJ7BeK7JfpyCHHZMb3t2v1dY/+SZM3XbAE+EsAH2SDhiR34QRU0b1Bez83+OcKUZ2T5FBoC4SfpHTdcXWI70NoSmV8nL1RMlA1tw=,iv:oE2cgjS38QTyqTLsRPTGuOSAZjs/Na0ellL4C9b0F8w=,tag:XteEERYyN16sRuhG1alOvw==,type:str]
 sops:
     kms: []
     gcp_kms: []
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2023-12-25T13:39:51Z"
-    mac: ENC[AES256_GCM,data:9JrVXESNjG+rApNsTP1uF2X+4feKSgcafnRFWvkps18DjkmUdBpGTPaWeIdWfsiInHPHqOPcuk5JHoe8G/Su8n86wx8skiYKwM9TTmPDqofgG289f12uj1AV1O01acm/rGyX/eIWWQ5FNUFp4jvisoicL5+Udd4/n50+nSLHgq4=,iv:pBtq4/GnKS4pKvv9Vc50m3JsoiFygUCUEArEbrjwiy8=,tag:dg4ALHZpVKMpYu/nRMYI5A==,type:str]
+    lastmodified: "2023-12-29T14:09:58Z"
+    mac: ENC[AES256_GCM,data:AZdlIri597qhM3BCNjpLKPuG5R5YBHHpeAv72yBCCiRL/BN+yDj4XP04Nd73+Lfp2LBaenpn/b3dBO2idnnB7jKuAtVu8y1HVouBnQu67cyQUdHjzzYVyx/jDE2ZzAVzqD9DyoNzljavZ1BPL3eJEn43cNGn2ULmVQ9TBYH9DFQ=,iv:r3orMq+O97qah/j7GfArk5pPB+Ej6DKMce5YHsS2WqU=,tag:E+w3GNOsXhnPOd8a2aDpPQ==,type:str]
     pgp:
-        - created_at: "2023-12-25T13:39:51Z"
+        - created_at: "2023-12-29T14:09:58Z"
           enc: |-
             -----BEGIN PGP MESSAGE-----
 
-            hQGMA71EESEn7N2iAQv+Pg73TmFB0HSFiUJ1z9Ty0rR+yzlzpq02VgvedToxj+kN
-            S4CI0HauaSQA7XdAsmm5Fb/BZcEut5t/OHyvsw/tQJzz5O+J5MLICO88CRYOefgR
-            qZGG1hvM1I9c5CqwtOil7JdxE0kh2BfSUhMZ+h1uUqV+uCAXWPcqo0qx+6ptRP8x
-            qLZ8DyERJCednn3y1LtU7jtqINPNBSwMZDE0BnI0wTd1Fn+3FgY7cOwFSQcBosDU
-            E/adjumO9BhvRH/iYpUZQGSJpVBQfJQx8hWSVMkl5ZV25EUtAQjiPxN4ysNkb7/7
-            ed+nzTl0tTDlYhEz4aYoK0U1i4zBbk/wnmfnSfRGEJRkgtTatST4KkkP+AynBCL1
-            bSQV6emfND9lU5nHkJu2v5//TSvZuce/OjGaSc0xhQfbDkG1VF/tHVVPUpCVczZC
-            J9PM3tS2HrW3QnhtDSrN4fHxA1s2OWRbwMimQdkWn4zTwqP5AC32iDDFVILbHUx1
-            mjV4cI2AkhW3SyC+ZM/h0l4B0xd8FbZx2FaWiRWmv37ofSf9VJICazCk9QuTOvVX
-            bg5D0pkgdoJZ1bQ/ARD7r/LDAqnFTgOGqIomtS1XN3ebMF2gAlahNXOcCpZPgCNd
-            wzGPYG44jhgQqHywLuXS
-            =mwPQ
+            hQGMA71EESEn7N2iAQv+OJJ/2E4koVb66kH4RQ2ohLzuDwU2qWvTiRyzhmfHNjQV
+            lkb2GYoog96NR5ys2f0TONerBmkFYa/Hahprb5Jxv4JMO2nu6ef3CCsJ2hyGappS
+            +ZrpRQPgds4a+C2vbi73oBjU9Z3moKaH6Bw+2PzoVX8238DoQq0ijmO2wr268JtI
+            LhjQakH7w0dtuEZsY1goTls7czQpFTsKTfit3A8RAw03WZ97rMHRt2WtVwBXwOju
+            G/pRMAOUtWPLhCLXfGT7GxlyzOprI4ipmyxRkb73TxPiMs5AuohdDdKy9Sei722Y
+            OwMsgJKhl5SBCSY4NwXq4ZsiQoVP69XI519tdjYLkjduG0fXFIUmzSJYkeUR6jQK
+            2miUNRsYsAsk3XCN4Cz0Y1dU5JCrWL/U9v6r732Hta0JKNceOwtNpKxEQuaEGhRr
+            iKDmpN/l5/l+128rdDwXVWA+YuLfJiPG7BHQVMILqCZ+UVvgQ7zp2VWxtgdVzSI9
+            6FiEETwqs4I4ZGcA3Wk10l4BMymCzPxU9ybuBNiGgtxygfIDrQciM+JFooFqpu7F
+            M39UwLYUCikDSCoKTHC4qPih4rs9tKNf8eNOi3SrgczFO+JO6U+3+eqV8x4ksjWR
+            8ouohxbOYpITuj4Ks0No
+            =HEfZ
             -----END PGP MESSAGE-----
           fp: 2D47B9C25AAD87860CC1778F7022B8F414F4AEED
     encrypted_regex: ^(data|stringData)$
