--- a/cluster/apps/monitoring/kube-prometheus-stack/prometheus-rules/flux.yaml
+++ b/cluster/apps/monitoring/kube-prometheus-stack/prometheus-rules/flux.yaml
@@ -22,10 +22,7 @@ spec:
               {{ $labels.kind }} {{ $labels.namespace }}/{{ $labels.name }} reconciliation
               has been failing for more than 15 minutes.
           expr: |
-            max(gotk_reconcile_condition{status="False",type="Ready"}) by (namespace, name, kind)
-              +
-            on(namespace, name, kind) (max(gotk_reconcile_condition{status="Deleted"})
-              by (namespace, name, kind)) * 2 == 1
+            max by (namespace, name, kind) (gotk_reconcile_condition{status="False",type="Ready"}) == 1
           for: 15m
           labels:
             severity: critical
