fix(prometheus): add missing namespaace

--- a/cluster/apps/monitoring/kube-prometheus-stack/scrapeconfigs/crowdsec.yaml
+++ b/cluster/apps/monitoring/kube-prometheus-stack/scrapeconfigs/crowdsec.yaml
@@ -3,7 +3,8 @@ apiVersion: monitoring.coreos.com/v1alpha1
 kind: ScrapeConfig
 metadata:
   name: crowdsec
+  namespace: monitoring
 spec:
   staticConfigs:
-    - targets: ["opnsense.home.arpa:6060"]
+    - targets: ["opnsense.home:6060"]
   metricsPath: /metrics
