--- a/cluster/apps/mb-scheduler/ks.yaml
+++ b/cluster/apps/mb-scheduler/ks.yaml
@@ -2,7 +2,7 @@ apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
   name: mb-scheduler
-  namespace: mb-scheduler
+  namespace: flux-system
 spec:
   suspend: false
   interval: 30m
