--- a/cluster/base/apps.yaml
+++ b/cluster/base/apps.yaml
@@ -24,3 +24,24 @@ spec:
       #        name: cluster-settings
       - kind: Secret
         name: cluster-secrets
+  # https://github.com/fluxcd/kustomize-controller/issues/707
+  # Needed so other kustomizations have these added to them
+  patches:
+    - patch: |-
+        apiVersion: kustomize.toolkit.fluxcd.io/v1
+        kind: Kustomization
+        metadata:
+          name: not-used
+        spec:
+          decryption:
+            provider: sops
+            secretRef:
+              name: sops-gpg
+        postBuild:
+          substituteFrom:
+            - kind: Secret
+              name: cluster-secrets
+        target:
+          group: kustomize.toolkit.fluxcd.io
+          kind: Kustomization
+          labelSelector: substitution.flux.home.arpa/disabled notin (true)
