wip(mb-scheduler): remove label selector

--- a/cluster/apps/mb-scheduler/postgresql/postgresql-helm-release.yaml
+++ b/cluster/apps/mb-scheduler/postgresql/postgresql-helm-release.yaml
@@ -28,8 +28,7 @@ spec:
     primary:
       persistence:
         enabled: true
-        storageClass: longhorn
-        size: 2Gi
+        existingClaim: mb-scheduler-db-pvc
       resources:
         requests:
           memory: 50Mi
